# decaf

./: .gitignore  .gitmodules  Cargo.toml  readme.md
.github/workflows/: qc.yaml
dar/: Cargo.toml
dar/src/: main.rs
decaf/: Cargo.toml  decaf.rs  listing.rs  readme.md  relpath.rs
decaf-capi/: Cargo.toml
decaf-cli/: Cargo.toml  readme.md
decaf-cli/src/: main.rs
decaf-nostd/: Cargo.toml
decaf-reference/: decaf_reference.go  decaf_reference_test.go  go.mod  go.sum  readme.md
decaf-reference/cli-example/: .gitignore  main.go  readme.md
decaf-reference/testdata/: all_cases_known_good.df  toybox-0.8.11.df
decaf-reference/testdata/all_cases/: executable.sh
decaf-reference/testdata/all_cases_known_good_extracted/: symlink_valid.rs  symlink_valid_bare_subdir
decaf-reference/testdata/all_cases_known_good_extracted/dir/subdir/: lipsum.txt
decaf-tar/: Cargo.toml
decaf/src/: decaf.rs
decaf/tests/: decaf.rs
doc/: readme.md  spec.md
doc/ietf/: .gitignore  draft-abney-decaf00.xml  readme.md
dtar/: Cargo.toml  readme.md
dtar/src/: dtar.rs
dtar/tests/: tests.rs
libdecaf/: readme.md
src/: main.rs
tests/: decaf.rs
