[package]
name = "decaf"
version = "0.0.1"
authors = [
    "The DeCAF Project Developers",
    "William Abney <weebney@freeassn.org>",
]
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/decafwg/decaf"
documentation = "https://docs.rs/decaf"
homepage = "https://github.com/decafwg/decaf"
description = """
The Deterministic Compressed Archive Format (DeCAF)
"""
categories = ["compression", "filesystem"]
edition = "2021"

[workspace]
members = ["decaf-capi", "decaf-cli", "dtar"]

[lib]
name = "decaf"
path = "decaf/decaf.rs"

[profile.release]
strip = true
overflow-checks = true
lto = true

[profile.dev]
opt-level = 3
debug = true

[profile.test]
opt-level = 3
debug = true

[dependencies]
zstd = "0.13.2"

[dependencies.xxhash-rust]
version = "0.8.12"
features = ["xxh3"]

[dev-dependencies]
tempfile = "3.12.0"
