[package]
name = "decaf"
version = "0.0.1"
authors = [
    "The DeCAF Project Developers",
    "William Abney <weebney@freeassn.org>",
]
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/decafwg/decaf"
documentation = "https://docs.rs/decaf"
homepage = "https://github.com/decafwg/decaf"
description = """
The Deterministic Compressed Archive Format (DeCAF)
"""
categories = ["compression", "filesystem"]
edition = "2021"

[dependencies]
xxhash-rust = { version = "0.8.12", features = ["xxh3"] }
zstd = "0.13.2"

[dev-dependencies]
tempfile = "3.12.0"

[lib]
name = "decaf"
path = "src/decaf.rs"
