[package]
name = "dtar"
version = "1.0.0"
authors = [
    "The DeCAF Project Developers",
    "William Abney <weebney@freeassn.org>",
]
license = "MIT OR Apache-2.0 OR BSD-2-Clause"
readme = "readme.md"
repository = "https://github.com/weebney/decaf/decaf-tar"
documentation = "https://github.com/weebney/decaf/decaf-tar"
homepage = "https://github.com/weebney/decaf"
description = """
Deterministic POSIX tar (ustar) archiver
"""
categories = ["compression", "filesystem"]
edition = "2021"

[lib]
path = "src/dtar.rs"

[dependencies]
decaf = { path = "../decaf", version = "0" }
flate2 = "1.0.33"
tar = "0.4.41"
